test/corpus/list_lit.txt
================================================================================
Empty List
================================================================================

()

--------------------------------------------------------------------------------

(source
  (list_lit))

================================================================================
List with Keywords
================================================================================

(:a :b :c)

--------------------------------------------------------------------------------

(source
  (list_lit
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)))

================================================================================
List of Numbers
================================================================================

(1 2 3)

--------------------------------------------------------------------------------

(source
  (list_lit
    (num_lit)
    (num_lit)
    (num_lit)))
