test/corpus/quasi_quoting_lit.txt
================================================================================
Syntax Quoted Symbol
================================================================================

`a-sym

--------------------------------------------------------------------------------

(source
  (quasi_quoting_lit
    (sym_lit (sym_name))))

================================================================================
Syntax Quoted List
================================================================================

`(+ ,a 1)

--------------------------------------------------------------------------------

(source
  (quasi_quoting_lit
    (list_lit
      (sym_lit (sym_name))
      (unquoting_lit
        (sym_lit (sym_name)))
      (num_lit))))
